exports[`Type Snob typeSnobCreateElement gracefully handles multiple suggestions 1`] = `
Array [
  Array [
    "[React Type Snob] Problems detected in text content of \`component-name-here\`; ugly single quotes, full-stops as ellipses and space preceding ellipses.
* “ugly single quotes” test suggests \`‘\` or \`’\`
* “full-stops as ellipses” test suggests \`…\`
Please check the render method of \`ParentItem\`",
  ],
]
`;

exports[`Type Snob typeSnobCreateElement tests for full-stops as ellipses 1`] = `
Array [
  Array [
    "[React Type Snob] Problems detected in text content of \`component-name-here\`; full-stops as ellipses.
* “full-stops as ellipses” test suggests \`…\`
Please check the render method of \`ParentItem\`",
  ],
]
`;

exports[`Type Snob typeSnobCreateElement tests for full-stops as ellipses 2`] = `
Array [
  Array [
    "[React Type Snob] Problems detected in text content of \`component-name-here\`; full-stops as ellipses and space preceding ellipses.
* “full-stops as ellipses” test suggests \`…\`
Please check the render method of \`ParentItem\`",
  ],
  Array [
    "[React Type Snob] Problems detected in text content of \`component-name-here\`; space preceding ellipses.
Please check the render method of \`ParentItem\`",
  ],
]
`;

exports[`Type Snob typeSnobCreateElement tests for ugly double quotes 1`] = `
Array [
  Array [
    "[React Type Snob] Problems detected in text content of \`component-name-here\`; ugly double quotes.
* “ugly double quotes” test suggests \`“\` or \`”\`
Please check the render method of \`ParentItem\`",
  ],
]
`;

exports[`Type Snob typeSnobCreateElement tests for ugly single quotes 1`] = `
Array [
  Array [
    "[React Type Snob] Problems detected in text content of \`component-name-here\`; ugly single quotes.
* “ugly single quotes” test suggests \`‘\` or \`’\`
Please check the render method of \`ParentItem\`",
  ],
]
`;
